fix: change lang, shift and keypress

--- a/style.css
+++ b/style.css
@@ -50,6 +50,10 @@ textarea {
     cursor: pointer;
 }
 
+.slash-key {
+    width: 90px;
+}
+
 .backspace-key, .enter-key {
     width: 120px;
 }
